<resources>
    <string name="app_name">SmartButler</string>
    <string name="text_setting">设置</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="text_age">年龄</string>
    <string name="password_again">确认密码</string>
    <string name="text_girl">女</string>
    <string name="text_boy">男</string>
    <string name="desc">描述</string>
    <string name="text_email">邮箱</string>
    <string name="text_register_remind">注册成功需要邮箱验证，否则无法登录！</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_now_login">正在登录</string>
    <string name="login_out">退出登录</string>
    <string name="text_courier_company">快递公司编号</string>
    <string name="text_courier_number">单号</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="text_more_length">输入长度超出限制</string>
    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_content_7">www.imooc.com</string>
    <string name="text_test_version">"检测版本: "</string>
    <string name="text_input_phone">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="text_welfare">福利</string>
</resources>
