<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg_house">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_login_avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:hint="@string/username"
                android:textColor="@android:color/holo_orange_light"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_orange_light"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/keep_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="记住密码"
            android:textColor="@color/colorAccent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_orange"
            android:shadowColor="@android:color/black"
            android:text="@string/register"
            android:textColor="@android:color/background_dark" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:shadowColor="@android:color/black"
            android:text="@string/login"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="忘记密码？"
            android:textColor="@color/colorAccent" />


    </LinearLayout>


</LinearLayout>